Trying to fix broken line wrapping functionality

--- a/codemirror/theme/newplus.css
+++ b/codemirror/theme/newplus.css
@@ -7,6 +7,7 @@
 
 .cm-s-newplus.CodeMirror {
 	font-family: Inconsolata, 'Source Code Pro', Menlo, Monaco, monospace !important;
+	font-size: 20px;
 	background: #282a36;
 	color: #eeeeee;
 	font-weight: 300 !important;
@@ -110,4 +111,5 @@
 /* Cursor */
 .cm-s-newplus .CodeMirror-lines .CodeMirror-cursor {
   border-left: 2px solid #ff3319 !important; /* #819090 */
+  z-index: 3000 !important;
 }
